Fix crash when rendering animation with a lot of frames on Windows

The problem happens because QProgressDialog::setValue() can call
QApplication::processEvents(), which causes recursive reentrancy
into the update functions, which is not nice.

BUG:401326
BACKPORT:krita/4.1